--- a/src/app/recetas/registrar/registrar.component.html
+++ b/src/app/recetas/registrar/registrar.component.html
@@ -2,7 +2,6 @@
 <hr>
 
 <form (ngSubmit)="guardar(receta)" autocomplete="off" #miFormulario="ngForm">
-   
     <!-- Nombre -->
     <div class="mb-3 row">
         <label class="col-sm-3 col-form-label">Nombre</label>
@@ -12,7 +11,6 @@
                    [(ngModel)]="receta.nombre"
                    name="nombre"
                    required>
-               
         </div>
     </div>
 
@@ -21,11 +19,11 @@
         <label class="col-sm-3 col-form-label">Descripcion</label>
         <div class="col-sm-9">
             <textarea name="" id="" cols="30" rows="4" class="form-control"
-                   placeholder="Descripcion de la receta"
-                   [(ngModel)]="receta.descripcion"
-                   name="nombre"
-                   required></textarea>
-              
+                placeholder="Descripcion de la receta"
+                [(ngModel)]="receta.descripcion"
+                name="nombre"
+                required>
+            </textarea>
         </div>
     </div>
 
@@ -33,7 +31,6 @@
     <div class="mb-3 row">
         <h4 class="col-sm-3 col-form-label">Agregar</h4>
         <div class="col-sm-9">
-
             <div class="input-group">
                 <input class="form-control"
                        placeholder="Nombre ingrediente"
@@ -57,122 +54,100 @@
                 <button class="btn btn-outline-primary"
                         type="button"
                         (click)="agregarIngrediente()">
-                    Agregar
+                        Agregar
+                </button>
+            </div>
+        </div>
+    </div>
+    
+    <!-- Lista de ingredientes -->
+    <div class="mb-3 row">
+        <label class="col-sm-3 col-form-label">Ingredientes</label>
+        <div class="col-sm-9">
+            <div class="input-group mb-1" *ngFor="let ingrediente of receta.ingredientes; let i = index">
+                <input [(ngModel)]="ingrediente.nombre" 
+                       name="favorito_{{ i }}" 
+                       class="form-control" required>
+
+                <input [(ngModel)]="ingrediente.cantidad" 
+                       type="number" 
+                       name="favorito_{{ ingrediente.nombre  }}" 
+                       class="form-control" required>
+
+                <input [(ngModel)]="ingrediente.unidad" 
+                       name="favorito_{{ ingrediente.unidad }}" 
+                       class="form-control" required>
+                       
+                <button class="btn btn-outline-danger" 
+                        type="button" 
+                        (click)="eliminarIngrediente(i)">
+                        Eliminar
+                </button>
+            </div>
+        </div>
+    </div>
+    <hr>
+
+    <!-- Agregar pasos -->
+    <div class="mb-3 row">
+        <h4 class="col">Agregar los pasos</h4>
+        
+        <div class="col-sm-9">
+
+            <div class="input-group">
+                <input class="form-control"
+                       type="number"
+                       placeholder="N° de paso"
+                       [(ngModel)]="numeroPaso"
+                       (keyup.enter)="agregarPasos()"
+                       name="nuevoJuego2">
+
+                <input class="form-control"
+                       placeholder="descripcion"
+                       [(ngModel)]="decripcionPaso"
+                       (keyup.enter)="agregarPasos()"
+                       name="cantidad2">
+
+                <button class="btn btn-outline-primary"
+                        type="button"
+                        (click)="agregarPasos()">
+                        Agregar
                 </button>
             </div>
         </div>
     </div>
 
-    
-    <!-- Lista de Juegos Favoritos -->
     <div class="mb-3 row">
         <label class="col-sm-3 col-form-label">Ingredientes</label>
         <div class="col-sm-9">
+            <div class="input-group mb-1" *ngFor="let pasos of receta.pasos; let i = index">
+                <input [(ngModel)]="pasos.numero" 
+                       type="number" 
+                       name="paso_{{ i }}" 
+                       class="form-control" required>
 
-            <div class="input-group mb-1"
-                 *ngFor="let ingrediente of receta.ingredientes; let i = index">
-                <input [(ngModel)]="ingrediente.nombre"
-                       name="favorito_{{ i }}"
-                       class="form-control"
-                       required>
+                <input [(ngModel)]="pasos.descripcion" 
+                       name="paso_{{ pasos.descripcion }}" 
+                       class="form-control" required>
 
-                <input [(ngModel)]="ingrediente.cantidad"
-                       type="number"
-                       name="favorito_{{ ingrediente.nombre  }}"
-                       class="form-control"
-                       required>
-
-                <input [(ngModel)]="ingrediente.unidad"
-                        name="favorito_{{ ingrediente.unidad }}"
-                       class="form-control"
-                       required>
-
-                <button class="btn btn-outline-danger"
-                        type="button"
-                        (click)="eliminarIngrediente(i)">
-                   Eliminar
-               </button>
+                <button class="btn btn-outline-danger" 
+                        type="button" 
+                        (click)="eliminarPaso(i)">
+                        Eliminar
+                </button>
             </div>
-
         </div>
     </div>
-
-    <hr>
-
-        <!-- Agregar pasos -->
-        <div class="mb-3 row">
-            <h4 class="col">Agregar los pasos</h4>
-            
-            <div class="col-sm-9">
     
-                <div class="input-group">
-                    <input class="form-control"
-                           type="number"
-                           placeholder="N° de paso"
-                           [(ngModel)]="numeroPaso"
-                           (keyup.enter)="agregarPasos()"
-                           name="nuevoJuego2">
-    
-                    <input class="form-control"
-                           placeholder="descripcion"
-                           [(ngModel)]="decripcionPaso"
-                           (keyup.enter)="agregarPasos()"
-                           name="cantidad2">
-    
-                    <button class="btn btn-outline-primary"
-                            type="button"
-                            (click)="agregarPasos()">
-                        Agregar
-                    </button>
-                </div>
-            </div>
-        </div>
-    
-        <div class="mb-3 row">
-            <label class="col-sm-3 col-form-label">Ingredientes</label>
-            <div class="col-sm-9">
-    
-                <div class="input-group mb-1"
-                     *ngFor="let pasos of receta.pasos; let i = index">
-                    <input [(ngModel)]="pasos.numero"
-                           type="number"
-                           name="paso_{{ i }}"
-                           class="form-control"
-                           required>
-    
-                    <input [(ngModel)]="pasos.descripcion"
-                            name="paso_{{ pasos.descripcion }}"
-                           class="form-control"
-                           required>
-    
-                    <button class="btn btn-outline-danger"
-                            type="button"
-                            (click)="eliminarPaso(i)">
-                       Eliminar
-                   </button>
-                </div>
-    
-            </div>
-        </div>
-    
-
     <div class="row">
         <div class="col-sm-12">
-            <button type="button"
-                    class="btn btn-primary float-end"
-                    [disabled]="miFormulario.invalid"
-                    (click)="guardar(receta)">
+            <button type="button" class="btn btn-primary float-end" 
+                [disabled]="miFormulario.invalid" 
+                (click)="guardar(receta)">
                 Guardar
             </button>
         </div>
     </div>
-
 </form>
 
-
-
-    <button type="button" 
-    (click)="nuevaReceta()"
-    class="btn btn-primary"
-    >Nueva</button>
-
+<button type="button" (click)="nuevaReceta()" class="btn btn-primary">Nueva</button>
