--- a/src/app/recetas/registrar/registrar.component.html
+++ b/src/app/recetas/registrar/registrar.component.html
@@ -7,7 +7,7 @@
         <label class="col-sm-3 col-form-label">Nombre</label>
         <div class="col-sm-9">
             <input class="form-control"
-                   placeholder="Nombre de la persona"
+                   placeholder="Nombre de la receta"
                    [(ngModel)]="receta.nombre"
                    name="nombre"
                    required>
@@ -27,9 +27,22 @@
         </div>
     </div>
 
+    <!-- imagen -->
+    <div class="mb-3 row">
+        <label class="col-sm-3 col-form-label">Imagen</label>
+        <div class="col-sm-9">
+             <input class="form-control"
+                    type="file"
+                    placeholder="Imagen de receta"
+                    [(ngModel)]="receta.image"
+                    name="image" #fileUpload>
+        </div>
+    </div>
+    <hr>
+
     <!-- Agregar Favorito -->
     <div class="mb-3 row">
-        <h4 class="col-sm-3 col-form-label">Agregar</h4>
+        <h4 class="col">Agregar ingredientes</h4>
         <div class="col-sm-9">
             <div class="input-group">
                 <input class="form-control"
@@ -40,7 +53,7 @@
 
                 <input class="form-control"
                        type="number"
-                       placeholder="cantidad"
+                       placeholder="Cantidad"
                        [(ngModel)]="cantidad"
                        (keyup.enter)="agregarIngrediente()"
                        name="cantidad">
@@ -54,7 +67,7 @@
                 <button class="btn btn-outline-primary"
                         type="button"
                         (click)="agregarIngrediente()">
-                        Agregar
+                        Añadir
                 </button>
             </div>
         </div>
@@ -64,19 +77,22 @@
     <div class="mb-3 row">
         <label class="col-sm-3 col-form-label">Ingredientes</label>
         <div class="col-sm-9">
-            <div class="input-group mb-1" *ngFor="let ingrediente of receta.ingredientes; let i = index">
+            <div class="input-group mb-3" *ngFor="let ingrediente of receta.ingredientes; let i = index">
                 <input [(ngModel)]="ingrediente.nombre" 
                        name="favorito_{{ i }}" 
-                       class="form-control" required>
+                       class="form-control" 
+                       placeholder="Nombre ingrediente" required>
 
                 <input [(ngModel)]="ingrediente.cantidad" 
                        type="number" 
                        name="favorito_{{ ingrediente.nombre  }}" 
-                       class="form-control" required>
+                       class="form-control" 
+                       placeholder="Cantidad" required>
 
                 <input [(ngModel)]="ingrediente.unidad" 
                        name="favorito_{{ ingrediente.unidad }}" 
-                       class="form-control" required>
+                       class="form-control" 
+                       placeholder="Unidad de medida" required>
                        
                 <button class="btn btn-outline-danger" 
                         type="button" 
@@ -90,7 +106,7 @@
 
     <!-- Agregar pasos -->
     <div class="mb-3 row">
-        <h4 class="col">Agregar los pasos</h4>
+        <h4 class="col">Agregar Pasos</h4>
         
         <div class="col-sm-9">
 
@@ -111,24 +127,26 @@
                 <button class="btn btn-outline-primary"
                         type="button"
                         (click)="agregarPasos()">
-                        Agregar
+                        Añadir
                 </button>
             </div>
         </div>
     </div>
 
     <div class="mb-3 row">
-        <label class="col-sm-3 col-form-label">Ingredientes</label>
+        <label class="col-sm-3 col-form-label">Pasos</label>
         <div class="col-sm-9">
-            <div class="input-group mb-1" *ngFor="let pasos of receta.pasos; let i = index">
+            <div class="input-group mb-3" *ngFor="let pasos of receta.pasos; let i = index">
                 <input [(ngModel)]="pasos.numero" 
                        type="number" 
                        name="paso_{{ i }}" 
-                       class="form-control" required>
+                       class="form-control" 
+                       placeholder="N° de paso" required>
 
                 <input [(ngModel)]="pasos.descripcion" 
                        name="paso_{{ pasos.descripcion }}" 
-                       class="form-control" required>
+                       class="form-control" 
+                       placeholder="descripcion" required>
 
                 <button class="btn btn-outline-danger" 
                         type="button" 
@@ -138,16 +156,17 @@
             </div>
         </div>
     </div>
+    <hr>
     
     <div class="row">
         <div class="col-sm-12">
-            <button type="button" class="btn btn-primary float-end" 
+            <button type="button" class="btn btn-success float-start" 
                 [disabled]="miFormulario.invalid" 
                 (click)="guardar(receta)">
-                Guardar
+                Guardar receta
             </button>
         </div>
     </div>
 </form>
 
-<button type="button" (click)="nuevaReceta()" class="btn btn-primary">Nueva</button>
+<!-- <button type="button" (click)="nuevaReceta()" class="btn btn-primary">Nueva</button> -->
