--- a/src/app/recetas/registrar/registrar.component.html
+++ b/src/app/recetas/registrar/registrar.component.html
@@ -1,3 +1,4 @@
+<div class="container">
 <h2>Agregar receta</h2>
 <hr>
 
@@ -129,7 +130,7 @@
         </div>
     
         <div class="mb-3 row">
-            <label class="col-sm-3 col-form-label">Ingredientes</label>
+            <label class="col-sm-3 col-form-label">Pasos</label>
             <div class="col-sm-9">
     
                 <div class="input-group mb-1"
@@ -155,7 +156,6 @@
             </div>
         </div>
     
-
     <div class="row">
         <div class="col-sm-12">
             <button type="button"
@@ -169,10 +169,10 @@
 
 </form>
 
-
-
     <button type="button" 
     (click)="nuevaReceta()"
     class="btn btn-primary"
     >Nueva</button>
+
+</div>
 
