--- a/src/app/recetas/registrar/registrar.component.html
+++ b/src/app/recetas/registrar/registrar.component.html
@@ -1,6 +1,7 @@
+<app-side-menu></app-side-menu>
 <div class="container">
     <form (ngSubmit)="guardar(receta, myForm)" autocomplete="off" #myForm="ngForm">
-        <div class="border border-success border-opacity-50 rounded p-3">
+        <div class="border border-success border-opacity-50 rounded p-3 mt-3">
             <!-- Nombre -->
             <h4 class="col">Datos generales</h4>
             <div class="mb-3 row">
@@ -161,7 +162,7 @@
         </div>
         <div class="row">
             <div class="col-sm-12">
-                <button type="submit" class="btn btn-success float-start" 
+                <button type="submit" class="btn btn-success float-start mb-3" 
                     [disabled]="myForm.invalid || loadingSavebtn">
                     <span *ngIf="loadingSavebtn" class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
                     Guardar receta
