--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+.main-icon {
+    border: solid snow 1px;
+    border-radius: 15px;
+}
