--- a/src/app/side-menu/side-menu.component.html
+++ b/src/app/side-menu/side-menu.component.html
@@ -10,6 +10,9 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item active">
+                    <a class="nav-link" routerLink="/inicio">Inicio</a>
+                </li>
+                <li class="nav-item active">
                     <a class="nav-link" routerLink="/listado">Listados</a>
                 </li>
                 <li class="nav-item active">
