--- a/src/app/recetas/registrar/registrar.component.css
+++ b/src/app/recetas/registrar/registrar.component.css
@@ -13,6 +13,20 @@ html {
     text-decoration: none;
     font-weight: 400;
   }
+
+  .editImageContainer {
+    object-fit: contain;
+  }
+
+  .editImage {
+    border: dotted 3px #0d6efd;
+    width: 100%;
+    object-fit: cover;
+  }
+
+  img.disabled {
+    opacity:0.5;
+  }
   
   h2 {
     text-align: center;
