--- a/src/app/recetas/registrar/registrar.component.html
+++ b/src/app/recetas/registrar/registrar.component.html
@@ -1,48 +1,67 @@
 <app-side-menu></app-side-menu>
 <div class="container">
     <div class="row">
+        <h1 class="mt-3">{{ (!id)? "Registrar receta": "Editar receta" }}</h1>
         <form (ngSubmit)="guardar(receta, myForm)" autocomplete="off" #myForm="ngForm">
-            <div class="border border-success border-opacity-50 rounded p-3 mt-3">
-                <!-- Nombre -->
-                <h4 class="col">Datos generales</h4>
-                <div class="mb-3 row">
-                    <label class="col-sm-3 col-form-label">Nombre</label>
-                    <div class="col-sm-9">
-                        <input class="form-control"
-                               placeholder="Nombre de la receta"
-                               [(ngModel)]="receta.nombre"
-                               name="nombre"
-                               required>
+            <div class="border {{id? 'border-primary': 'border-success'}} border-opacity-50 rounded p-3 mt-3">
+                <div class="row">
+                    <div class="{{id? 'col-md-8': 'col-md-12'}}">
+                        <!-- Nombre -->
+                        <h4 class="col">Datos generales</h4>
+                        <div class="mb-3 row">
+                            <label class="col-sm-3 col-form-label">Nombre</label>
+                            <div class="col-sm-9">
+                                <input class="form-control"
+                                       placeholder="Nombre de la receta"
+                                       [(ngModel)]="receta.nombre"
+                                       name="nombre"
+                                       required>
+                            </div>
+                        </div>
+                    
+                        <!-- Descripcion -->
+                        <div class="mb-3 row">
+                            <label class="col-sm-3 col-form-label">Descripcion</label>
+                            <div class="col-sm-9">
+                                <textarea name="" id="" cols="30" rows="4" class="form-control"
+                                    placeholder="Descripcion de la receta"
+                                    [(ngModel)]="receta.descripcion"
+                                    name="nombre"
+                                    required>
+                                </textarea>
+                            </div>
+                        </div>
+                    
+                        <!-- imagen -->
+                        <div class="mb-3 row" *ngIf="!id">
+                            <label class="col-sm-3 col-form-label">Imagen</label>
+                            <div class="col-sm-9">
+                                 <input class="form-control"
+                                        type="file"
+                                        placeholder="Imagen de receta"
+                                        (change)="onImagechange($event)"
+                                        name="image" #fileUpload>
+                            </div>
+                        </div>
                     </div>
-                </div>
-            
-                <!-- Descripcion -->
-                <div class="mb-3 row">
-                    <label class="col-sm-3 col-form-label">Descripcion</label>
-                    <div class="col-sm-9">
-                        <textarea name="" id="" cols="30" rows="4" class="form-control"
-                            placeholder="Descripcion de la receta"
-                            [(ngModel)]="receta.descripcion"
-                            name="nombre"
-                            required>
-                        </textarea>
-                    </div>
-                </div>
-            
-                <!-- imagen -->
-                <div class="mb-3 row">
-                    <label class="col-sm-3 col-form-label">Imagen</label>
-                    <div class="col-sm-9">
-                         <input class="form-control"
-                                type="file"
-                                placeholder="Imagen de receta"
-                                (change)="onImagechange($event)"
-                                name="image" #fileUpload>
+                    <div class="col-md-4" *ngIf="id">
+                        <div class="rounded row">
+                            <div class="col-sm-12 editImageContainer">
+                                <img class="editImage {{imagenCambiada? 'disabled':''}}" src="{{receta.portada}}" alt="Imagen registada.">
+                            </div>
+                            <div class="col-sm-12 mt-3">
+                                <input class="form-control"
+                                       type="file"
+                                       placeholder="Imagen de receta"
+                                       (change)="onImagechange($event)"
+                                       name="image" #fileUpload>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
             
-            <div class="border border-success border-opacity-50 rounded p-3 mt-3">
+            <div class="border {{id? 'border-primary': 'border-success'}} border-opacity-50 rounded p-3 mt-3">
                 <!-- Agregar Favorito -->
                 <div class="mb-3 row">
                     <h4 class="col">Agregar ingredientes</h4>
@@ -107,7 +126,7 @@
                 </div>
             </div>
             
-            <div class="border border-success border-opacity-50 rounded p-3 mt-3 mb-3">
+            <div class="border {{id? 'border-primary': 'border-success'}} border-opacity-50 rounded p-3 mt-3 mb-3">
                 <!-- Agregar pasos -->
                 <div class="mb-3 row">
                     <h4 class="col">Agregar pasos</h4>
@@ -163,10 +182,15 @@
             </div>
             <div class="row">
                 <div class="col-sm-12">
-                    <button type="submit" class="btn btn-success float-start mb-3" 
+                    <button *ngIf="!id" type="submit" class="btn btn-success btn-lg float-start mb-3" 
                         [disabled]="myForm.invalid || loadingSavebtn">
                         <span *ngIf="loadingSavebtn" class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
-                        Guardar receta
+                        Crear receta
+                    </button>
+                    <button *ngIf="id" type="submit" class="btn btn-primary btn-lg float-start mb-3" 
+                        [disabled]="myForm.invalid || loadingEditbtn">
+                        <span *ngIf="loadingEditbtn" class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+                        Guardar cambios
                     </button>
                 </div>
             </div>
