--- a/src/app/recetas/inicio/inicio.component.html
+++ b/src/app/recetas/inicio/inicio.component.html
@@ -7,25 +7,20 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="https://wallpaperaccess.com/full/2461288.jpg" class="d-block w-100" alt="...">
+      <img src="https://storage.googleapis.com/recetas-resources/app-resources/Slide1.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
-        <h1 class="custom-title-carrusel">First slide label</h1>
-        <h3>Some representative placeholder content for the first slide.</h3>
+        <h1 class="custom-title-carrusel">Mariscos</h1>
+        <h3 class="custom-description-carrusel">No es necesario un tenedor de plata para comer buena comida.</h3>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="https://wallpaperaccess.com/full/2461293.jpg" class="d-block w-100" alt="...">
+      <img src="https://storage.googleapis.com/recetas-resources/app-resources/Slide 2.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
-        <h1 class="custom-title-carrusel">Second slide label</h1>
-        <h3>Some representative placeholder content for the second slide.</h3>
+        <h1 class="custom-title-carrusel">Recetas internacionales.</h1>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="https://wallpaperaccess.com/full/2461301.jpg" class="d-block w-100" alt="...">
-      <div class="carousel-caption d-none d-md-block">
-        <h1 class="custom-title-carrusel">Third slide label</h1>
-        <h3>Some representative placeholder content for the third slide.</h3>
-      </div>
+      <img src="https://storage.googleapis.com/recetas-resources/app-resources/Slide3.jpg" class="d-block w-100" alt="...">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
@@ -38,9 +33,9 @@
   </button>
 </div>
 
-<div class="container custom-card mt-4 p-4 mt-4" *ngFor="let receta of recetas">
+<div class="container custom-card mt-4 p-4 mt-4 mb-4" *ngFor="let receta of recetas">
   <div class="row">
-    <h3 class="text-capitalize custom-card-title">{{receta.nombre}}</h3>
+    <h3 class="text-uppercase custom-card-title">{{receta.nombre}}</h3>
     <div class="col-md-12 mt-2">
       <div class="row">
         <div class="col-md-7">
@@ -50,16 +45,16 @@
           </div>
         </div>
         <div class="col-md-5">
-          <h5 class="custom-card-description custom-card-secondary-title">Descripción.</h5>
-          <p>{{receta.descripcion}}</p>
+          <h5 class="custom-card-description custom-card-secondary-title text-uppercase">Descripción.</h5>
+          <p class="custom-card-descripcion">{{receta.descripcion}}</p>
         </div>
       </div>
     </div>
     <div class="col-md-12">
       <div class="row">
-        <div class="col-md-7 mt-3">
-          <h5 class="custom-card-secondary-title">Ingredientes.</h5>
-          <table class="table caption-top">
+        <div class="col-md-7 mt-3" *ngIf="receta.ingredientes.length > 0">
+          <h5 class="custom-card-secondary-title text-uppercase">Ingredientes.</h5>
+          <table class="table caption-top table-ingredientes">
             <thead>
               <tr>
                 <th scope="col">#</th>
@@ -71,15 +66,15 @@
             <tbody>
               <tr *ngFor="let ingrediente of receta.ingredientes; let i = index;">
                 <th scope="row">{{i + 1}}</th>
-                <td>{{ingrediente.nombre}}</td>
+                <td class="text-capitalize">{{ingrediente.nombre}}</td>
                 <td>{{ingrediente.cantidad}}</td>
-                <td>{{ingrediente.unidad}}</td>
+                <td class="text-capitalize">{{ingrediente.unidad}}</td>
               </tr>
             </tbody>
           </table>
         </div>
-        <div class="col-md-5 mt-3">
-          <h5 class="custom-card-secondary-title">Pasos de preparación.</h5>
+        <div class="col-md-5 mt-3" *ngIf="receta.pasos.length > 0">
+          <h5 class="custom-card-secondary-title text-uppercase">Preparación.</h5>
 
           <div class="accordion" id="accordionReceta_{{receta._id}}">
             <div class="accordion-item border border-opacity-25 border-primary" *ngFor="let paso of receta.pasos; let i = index">
