canbios de validacion de rutas

--- a/src/app/side-menu/side-menu.component.html
+++ b/src/app/side-menu/side-menu.component.html
@@ -13,13 +13,13 @@
                     <a class="nav-link" routerLink="/inicio">Inicio</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" routerLink="/listado">Listados</a>
+                    <a class="nav-link" routerLink="/listado">{{listado}}</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" routerLink="/registro">Nueva receta</a>
+                    <a class="nav-link" routerLink="/registro">{{nuevaReceta}}</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-danger" routerLink="/login">Cerrar session</a>
+                    <a class="nav-link text-danger" routerLink="/login">{{loginEstado}}</a>
                 </li>
             </ul>
         </div>
